# DotnetCliGui

./: .gitignore  CMakeLists.txt  README.md
headers/: DotnetDashboard.h  PackageList.h
src/: DotnetDashboard.cpp  PackageList.cpp  main.cpp
